購入処理の実装

--- a/src/main/resources/templates/sample51.html
+++ b/src/main/resources/templates/sample51.html
@@ -31,6 +31,10 @@
       </tbody>
     </table>
 
+    <div th:if="${fruit3}">
+      [[${fruit3.name}]]を[[${fruit3.price}]]で購入しました
+    </div>
+
   </div>
 
 </body>
