--- a/src/main/resources/templates/sample51.html
+++ b/src/main/resources/templates/sample51.html
@@ -21,7 +21,7 @@
         <th>金額</th>
         <th>処理</th>
       </thead>
-      <tbody>
+      <tbody sec:authorize="hasRole('ROLE_CUSTOMER')">
         <tr th:each="fruit,stat:${fruits2}">
           <td>[[${stat.index}]]</td>
           <td>[[${fruit.name}]]</td>
@@ -29,12 +29,27 @@
           <td><a th:href="@{/sample5/step3(id=${fruit.id})}">購入</a></td>
         </tr>
       </tbody>
+      <tbody sec:authorize="hasRole('ROLE_SELLER')">
+        <tr th:each="fruit,stat:${fruits2}">
+          <td>[[${stat.index}]]</td>
+          <td>[[${fruit.name}]]</td>
+          <td>[[${fruit.price}]]</td>
+          <td><a th:href="@{/sample5/step4(id=${fruit.id})}">編集</a></td>
+      </tbody>
     </table>
+  </div>
 
-    <div th:if="${fruit3}">
-      [[${fruit3.name}]]を[[${fruit3.price}]]で購入しました
-    </div>
+  <div th:if="${fruit3}">
+    [[${fruit3.name}]]を[[${fruit3.price}]]で購入しました
+  </div>
 
+  <div th:if="${fruit4}">
+    <from th:action="@{/sample5/step5(id=${fruit4.id})}">
+      <input type="text" name="name" th:value="${fruit4.name}" /><br>
+      <input type="number" name="price" th:value="${fruit4.price}" /><br>
+      <input type="submit" value="編集">
+      <input type="reset" value="リセット">
+    </from>
   </div>
 
 </body>
