--- a/src/main/resources/templates/sample51.html
+++ b/src/main/resources/templates/sample51.html
@@ -44,12 +44,12 @@
   </div>
 
   <div th:if="${fruit4}">
-    <from th:action="@{/sample5/step5(id=${fruit4.id})}">
+    <form th:action="@{/sample5/step5(id=${fruit4.id})}" method="post">
       <input type="text" name="name" th:value="${fruit4.name}" /><br>
       <input type="number" name="price" th:value="${fruit4.price}" /><br>
       <input type="submit" value="編集">
       <input type="reset" value="リセット">
-    </from>
+    </form>
   </div>
 
 </body>
