--- a/src/main/resources/templates/sample57.html
+++ b/src/main/resources/templates/sample57.html
@@ -28,11 +28,14 @@
             <td>[[${stat.index}]]</td>
             <td>[[${fruit.name}]]</td>
             <td>[[${fruit.price}]]</td>
-            <td><a th:href="@{/sample5/step8?id=2}">購入</a></td>
+            <td><a th:href="@{/sample5/step8(id=${fruit.id})}">購入</a></td>
           </tr>
         </sapn>
       </tbody>
     </table>
+  </div>
+  <div th:if="${fruit8}">
+    [[${fruit8.name}]]を[[${fruit8.price}]]で購入しました
   </div>
 </body>
 
